apps/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    security: required
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: web
      namespace: infra
      sectionName: websecure-gw
  hostnames:
    - "auth.alixroden.co.uk"
  rules:
    - backendRefs:
        - name: keycloak
          port: 7800
