apps/keycloak/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.alixroden.co.uk
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`keycloak.alixroden.co.uk`)
      kind: Rule
      services:
        - kind: Service
          name: keycloak-operator
          namespace: keycloak
          port: 8080
          scheme: http
  ingressClassName: traefik
  tls:
    secretName: alixroden-co-uk-tls
